<resources>

    <!--Ejercicio 1-->


    <string name="app_name">Tarea1</string>
    <string name="one">uno</string>
    <string name="two">dos</string>
    <string name="three">tres</string>
    <string name="four">cuatro</string>
    <string name="five">cinco</string>


    <!--Ejercicio 2-->

    <string name="pizza">Pizza</string>
    <string name="hamburger">Hamburger</string>
    <string name="taco">Taco</string>
    <string name="ice_scream">Ice cream</string>
    <string name="cake">Cake</string>
    
    
    <!--Ejercicio 3-->
    
    <string name="sentence">Si puedes imaginarlo, puedes programarlo.</string>
    <string name="sentence2">Nos hemos convertido en el fruto de nuestros pensamientos.</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>



    <!--Ejercicio 8_1-->
    <string name="hello_world">Hello world</string>

    <!--Ejercicio 10_3-->
    <string name="tab1">Tab 1</string>
    <string name="tab2">Tab 2</string>
    <string name="tab3">Tab 3</string>
    <string name="tab4">Tab 4</string>

</resources>
