<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

     android:layout_height="match_parent"
     android:layout_width="match_parent"


    >


    <TextView
        android:id="@+id/btn1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/one"
        android:textAlignment="center"
        android:layout_alignParentLeft="true"
        android:textSize="30dp"

        >

    </TextView>


    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/two"
        android:textSize="30dp"
        android:textAlignment="center"

        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"


        ></TextView>


    <TextView
        android:id="@+id/btn3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/three"
        android:textAlignment="center"
        android:layout_alignParentLeft="true"
        android:textSize="30dp"
        android:layout_marginTop="100dp"


        >

    </TextView>



    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/four"
        android:textSize="30dp"
        android:textAlignment="center"


        android:layout_alignParentRight="true"
        android:layout_marginTop="150dp"

        ></TextView>



    <TextView
        android:id="@+id/btn5"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/five"
        android:textAlignment="center"
        android:layout_alignParentLeft="true"
        android:textSize="30dp"
        android:layout_marginTop="200dp"


        >

    </TextView>


</RelativeLayout>


